hooks: started: Add CFS nice level adjustment
Co-authored-by: Danny Lin <danny@kdrag0n.dev>
Co-authored-by: Xelibix <xelibix@protonmail.com>
Co-authored-by: Zile995 <stefan.zivkovic995@gmail.com>

--- a/hooks/cores.conf
+++ b/hooks/cores.conf
@@ -5,6 +5,9 @@ LOG=/dev/kmsg
 VM_NAME="$1"
 VM_ACTION="$2/$3"
 
+# Nice level, ranges from 20 (lowest priority) to -20 (highest priority)
+TARGET_NICE="-1"
+
 # CPU pinning variables
 # You should change this variables.
 TOTAL_CORES='0-11'
