hooks: Add printer function
Signed-off-by: Zile995 <stefan.zivkovic995@gmail.com>

--- a/hooks/cores.conf
+++ b/hooks/cores.conf
@@ -1,6 +1,3 @@
-# Logging variables
-LOG=/dev/kmsg
-
 # Libvirt hook variables
 VM_NAME="$1"
 VM_ACTION="$2/$3"
@@ -9,9 +6,12 @@ VM_ACTION="$2/$3"
 TARGET_NICE="-1"
 
 # CPU pinning variables
-# You should change this variables.
+# You should change the variables below. 
 TOTAL_CORES='0-11'
 TOTAL_CORES_MASK=FFF               # 0-11, bitmask 0b111111111111
 HOST_CORES='0,3,6,9'               # Cores reserved for host
 HOST_CORES_MASK=924                # 0,3,6,9 bitmask 0b100100100100
 VIRT_CORES='1-2,4-5,7-8,10-11'     # Cores reserved for virtual machine(s)
+
+# Print function
+printer() { echo -e "libvirt-qemu: ${1} ${colors[green]}" >> /dev/kmsg; }
