--- a/hooks/cores.conf
+++ b/hooks/cores.conf
@@ -14,4 +14,4 @@ HOST_CORES_MASK=924                # 0,3,6,9 bitmask 0b100100100100
 VIRT_CORES='1-2,4-5,7-8,10-11'     # Cores reserved for virtual machine(s)
 
 # Print function
-printer() { echo -e "libvirt-qemu: ${1} ${colors[green]}" >> /dev/kmsg; }
+printer() { echo -e "libvirt-qemu: ${1}" >> /dev/kmsg; }
